--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,16 @@ button:hover {
     cursor: pointer;
 }
 
-p{
+#message {
+    margin-top: 30px;
+    transition: opacity 1s;
+}
 
+#message div {
+    font-size: 16px;
+    font-weight: normal;
+    opacity: 0.9;
+    margin-bottom: 10px;
 }
 
 h1{
