--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ body{
     font-family: sans-serif;
 }
 
+#logo{
+    font-size: 40px;
+    padding: 40px;
+    
+    font-weight: black;
+    font-family: sans-serif;
+}
+
 #container{
     margin-top: 100px;
     width: 80%;
@@ -46,5 +54,6 @@ button:hover {
 
 h1{
     margin-top: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
+
